{
  "version": 4,
  "terraform_version": "1.1.7",
  "serial": 466,
  "lineage": "a5a8e468-af82-5086-18fb-1087aeaea5fe",
  "resources": [
    {
      "mode": "managed",
      "type": "azurerm_lb",
      "name": "lbapp1",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "frontend_ip_configuration": [
              {
                "availability_zone": "No-Zone",
                "id": "/subscriptions/4320f689-5133-4260-b235-d02cc16611ff/resourceGroups/rg-uat-app-ci-001/providers/Microsoft.Network/loadBalancers/ilb-uat-app1-ci-001/frontendIPConfigurations/fe-lbapp1-php1",
                "load_balancer_rules": [
                  "/subscriptions/4320f689-5133-4260-b235-d02cc16611ff/resourceGroups/rg-uat-app-ci-001/providers/Microsoft.Network/loadBalancers/ilb-uat-app1-ci-001/loadBalancingRules/rule-app1-php-1-8081",
                  "/subscriptions/4320f689-5133-4260-b235-d02cc16611ff/resourceGroups/rg-uat-app-ci-001/providers/Microsoft.Network/loadBalancers/ilb-uat-app1-ci-001/loadBalancingRules/rule-app1-php-1-8082",
                  "/subscriptions/4320f689-5133-4260-b235-d02cc16611ff/resourceGroups/rg-uat-app-ci-001/providers/Microsoft.Network/loadBalancers/ilb-uat-app1-ci-001/loadBalancingRules/rule-app1-php-1-8083"
                ],
                "name": "fe-lbapp1-php1",
                "private_ip_address": "10.121.16.201",
                "private_ip_address_allocation": "Static",
                "private_ip_address_version": "IPv4",
                "subnet_id": "/subscriptions/4320f689-5133-4260-b235-d02cc16611ff/resourceGroups/rg-hub-net-ci-001/providers/Microsoft.Network/virtualNetworks/vnet-uat-net-ci-001/subnets/sn-uat-app-ci-001"
              },
              {
                "availability_zone": "No-Zone",
                "id": "/subscriptions/4320f689-5133-4260-b235-d02cc16611ff/resourceGroups/rg-uat-app-ci-001/providers/Microsoft.Network/loadBalancers/ilb-uat-app1-ci-001/frontendIPConfigurations/fe-lbapp1-java1",
                "load_balancer_rules": [
                  "/subscriptions/4320f689-5133-4260-b235-d02cc16611ff/resourceGroups/rg-uat-app-ci-001/providers/Microsoft.Network/loadBalancers/ilb-uat-app1-ci-001/loadBalancingRules/rule-app1-java-1-8180"
                ],
                "name": "fe-lbapp1-java1",
                "private_ip_address": "10.121.16.202",
                "private_ip_address_allocation": "Static",
                "private_ip_address_version": "IPv4",
                "subnet_id": "/subscriptions/4320f689-5133-4260-b235-d02cc16611ff/resourceGroups/rg-hub-net-ci-001/providers/Microsoft.Network/virtualNetworks/vnet-uat-net-ci-001/subnets/sn-uat-app-ci-001"
              },
              {
                "availability_zone": "No-Zone",
                "id": "/subscriptions/4320f689-5133-4260-b235-d02cc16611ff/resourceGroups/rg-uat-app-ci-001/providers/Microsoft.Network/loadBalancers/ilb-uat-app1-ci-001/frontendIPConfigurations/fe-lbapp1-java2",
                "load_balancer_rules": [
                  "/subscriptions/4320f689-5133-4260-b235-d02cc16611ff/resourceGroups/rg-uat-app-ci-001/providers/Microsoft.Network/loadBalancers/ilb-uat-app1-ci-001/loadBalancingRules/rule-app1-java-2-8180",
                  "/subscriptions/4320f689-5133-4260-b235-d02cc16611ff/resourceGroups/rg-uat-app-ci-001/providers/Microsoft.Network/loadBalancers/ilb-uat-app1-ci-001/loadBalancingRules/rule-app1-java-2-8483"
                ],
                "name": "fe-lbapp1-java2",
                "private_ip_address": "10.121.16.203",
                "private_ip_address_allocation": "Static",
                "private_ip_address_version": "IPv4",
                "subnet_id": "/subscriptions/4320f689-5133-4260-b235-d02cc16611ff/resourceGroups/rg-hub-net-ci-001/providers/Microsoft.Network/virtualNetworks/vnet-uat-net-ci-001/subnets/sn-uat-app-ci-001"
              },
              {
                "availability_zone": "No-Zone",
                "id": "/subscriptions/4320f689-5133-4260-b235-d02cc16611ff/resourceGroups/rg-uat-app-ci-001/providers/Microsoft.Network/loadBalancers/ilb-uat-app1-ci-001/frontendIPConfigurations/fe-lbapp1-java3",
                "load_balancer_rules": [
                  "/subscriptions/4320f689-5133-4260-b235-d02cc16611ff/resourceGroups/rg-uat-app-ci-001/providers/Microsoft.Network/loadBalancers/ilb-uat-app1-ci-001/loadBalancingRules/rule-app1-java-3-8080",
                  "/subscriptions/4320f689-5133-4260-b235-d02cc16611ff/resourceGroups/rg-uat-app-ci-001/providers/Microsoft.Network/loadBalancers/ilb-uat-app1-ci-001/loadBalancingRules/rule-app1-java-3-8280"
                ],
                "name": "fe-lbapp1-java3",
                "private_ip_address": "10.121.16.204",
                "private_ip_address_allocation": "Static",
                "private_ip_address_version": "IPv4",
                "subnet_id": "/subscriptions/4320f689-5133-4260-b235-d02cc16611ff/resourceGroups/rg-hub-net-ci-001/providers/Microsoft.Network/virtualNetworks/vnet-uat-net-ci-001/subnets/sn-uat-app-ci-001"
              },
              {
                "availability_zone": "No-Zone",
                "id": "/subscriptions/4320f689-5133-4260-b235-d02cc16611ff/resourceGroups/rg-uat-app-ci-001/providers/Microsoft.Network/loadBalancers/ilb-uat-app1-ci-001/frontendIPConfigurations/fe-lbapp1-java4",
                "load_balancer_rules": [
                  "/subscriptions/4320f689-5133-4260-b235-d02cc16611ff/resourceGroups/rg-uat-app-ci-001/providers/Microsoft.Network/loadBalancers/ilb-uat-app1-ci-001/loadBalancingRules/rule-app1-java-4-8080"
                ],
                "name": "fe-lbapp1-java4",
                "private_ip_address": "10.121.16.205",
                "private_ip_address_allocation": "Static",
                "private_ip_address_version": "IPv4",
                "subnet_id": "/subscriptions/4320f689-5133-4260-b235-d02cc16611ff/resourceGroups/rg-hub-net-ci-001/providers/Microsoft.Network/virtualNetworks/vnet-uat-net-ci-001/subnets/sn-uat-app-ci-001"
              },
              {
                "availability_zone": "No-Zone",
                "id": "/subscriptions/4320f689-5133-4260-b235-d02cc16611ff/resourceGroups/rg-uat-app-ci-001/providers/Microsoft.Network/loadBalancers/ilb-uat-app1-ci-001/frontendIPConfigurations/fe-lbapp1-java5",
                "load_balancer_rules": [
                  "/subscriptions/4320f689-5133-4260-b235-d02cc16611ff/resourceGroups/rg-uat-app-ci-001/providers/Microsoft.Network/loadBalancers/ilb-uat-app1-ci-001/loadBalancingRules/rule-app1-java-5-8080",
                  "/subscriptions/4320f689-5133-4260-b235-d02cc16611ff/resourceGroups/rg-uat-app-ci-001/providers/Microsoft.Network/loadBalancers/ilb-uat-app1-ci-001/loadBalancingRules/rule-app1-java-5-8430"
                ],
                "name": "fe-lbapp1-java5",
                "private_ip_address": "10.121.16.206",
                "private_ip_address_allocation": "Static",
                "private_ip_address_version": "IPv4",
                "subnet_id": "/subscriptions/4320f689-5133-4260-b235-d02cc16611ff/resourceGroups/rg-hub-net-ci-001/providers/Microsoft.Network/virtualNetworks/vnet-uat-net-ci-001/subnets/sn-uat-app-ci-001"
              },
              {
                "availability_zone": "No-Zone",
                "id": "/subscriptions/4320f689-5133-4260-b235-d02cc16611ff/resourceGroups/rg-uat-app-ci-001/providers/Microsoft.Network/loadBalancers/ilb-uat-app1-ci-001/frontendIPConfigurations/fe-lbapp1-java05",
                "load_balancer_rules": [
                  "/subscriptions/4320f689-5133-4260-b235-d02cc16611ff/resourceGroups/rg-uat-app-ci-001/providers/Microsoft.Network/loadBalancers/ilb-uat-app1-ci-001/loadBalancingRules/rule-app1-java-05-80"
                ],
                "name": "fe-lbapp1-java05",
                "private_ip_address": "10.121.16.207",
                "private_ip_address_allocation": "Static",
                "private_ip_address_version": "IPv4",
                "subnet_id": "/subscriptions/4320f689-5133-4260-b235-d02cc16611ff/resourceGroups/rg-hub-net-ci-001/providers/Microsoft.Network/virtualNetworks/vnet-uat-net-ci-001/subnets/sn-uat-app-ci-001"
              }
            ],
            "id": "/subscriptions/4320f689-5133-4260-b235-d02cc16611ff/resourceGroups/rg-uat-app-ci-001/providers/Microsoft.Network/loadBalancers/ilb-uat-app1-ci-001",
            "location": "centralindia",
            "name": "ilb-uat-app1-ci-001",
            "private_ip_address": "10.121.16.201",
            "private_ip_addresses": [
              "10.121.16.201",
              "10.121.16.202",
              "10.121.16.203",
              "10.121.16.204",
              "10.121.16.205",
              "10.121.16.206",
              "10.121.16.207"
            ],
            "resource_group_name": "rg-uat-app-ci-001",
            "sku": "Standard",
            "sku_tier": "Regional"
          },
          "dependencies": [
            "azurerm_subnet.snapp1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_interface",
      "name": "nicad01",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "enable_accelerated_networking": false,
            "enable_ip_forwarding": false,
            "id": "/subscriptions/4320f689-5133-4260-b235-d02cc16611ff/resourceGroups/rg-hub-ss-ci-001/providers/Microsoft.Network/networkInterfaces/vmad01-nic",
            "internal_domain_name_suffix": "b0xddlf1yiauva5xyyjo4hvm4d.rx.internal.cloudapp.net",
            "ip_configuration": [
              {
                "name": "internal",
                "primary": true,
                "private_ip_address": "10.121.1.132",
                "private_ip_address_allocation": "Dynamic",
                "private_ip_address_version": "IPv4",
                "subnet_id": "/subscriptions/4320f689-5133-4260-b235-d02cc16611ff/resourceGroups/rg-hub-net-ci-001/providers/Microsoft.Network/virtualNetworks/vnet-hub-net-ci-001/subnets/sn-hub-ss-ci-001"
              }
            ],
            "location": "centralindia",
            "mac_address": "60-45-BD-73-6A-BE",
            "name": "vmad01-nic",
            "private_ip_address": "10.121.1.132",
            "private_ip_addresses": [
              "10.121.1.132"
            ],
            "resource_group_name": "rg-hub-ss-ci-001",
            "virtual_machine_id": "/subscriptions/4320f689-5133-4260-b235-d02cc16611ff/resourceGroups/rg-hub-ss-ci-001/providers/Microsoft.Compute/virtualMachines/GEMAZUATSSAD01"
          },
          "dependencies": [
            "azurerm_subnet.snss"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_interface",
      "name": "nicdb1",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "enable_accelerated_networking": false,
            "enable_ip_forwarding": false,
            "id": "/subscriptions/4320f689-5133-4260-b235-d02cc16611ff/resourceGroups/rg-uat-db-ci-001/providers/Microsoft.Network/networkInterfaces/vmdb1-nic",
            "internal_domain_name_suffix": "2vg4gdi4r0hezbhc3xl1t2rjdf.rx.internal.cloudapp.net",
            "ip_configuration": [
              {
                "name": "internal",
                "primary": true,
                "private_ip_address": "10.121.20.5",
                "private_ip_address_allocation": "Dynamic",
                "private_ip_address_version": "IPv4",
                "subnet_id": "/subscriptions/4320f689-5133-4260-b235-d02cc16611ff/resourceGroups/rg-hub-net-ci-001/providers/Microsoft.Network/virtualNetworks/vnet-uat-net-ci-001/subnets/sn-uat-db-ci-001"
              }
            ],
            "location": "centralindia",
            "mac_address": "60-45-BD-AC-49-08",
            "name": "vmdb1-nic",
            "private_ip_address": "10.121.20.5",
            "private_ip_addresses": [
              "10.121.20.5"
            ],
            "resource_group_name": "rg-uat-db-ci-001",
            "virtual_machine_id": "/subscriptions/4320f689-5133-4260-b235-d02cc16611ff/resourceGroups/rg-uat-db-ci-001/providers/Microsoft.Compute/virtualMachines/GEMAZUATDB01"
          },
          "dependencies": [
            "azurerm_subnet.sndb"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_interface",
      "name": "nicdb2",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "enable_accelerated_networking": false,
            "enable_ip_forwarding": false,
            "id": "/subscriptions/4320f689-5133-4260-b235-d02cc16611ff/resourceGroups/rg-uat-db-ci-001/providers/Microsoft.Network/networkInterfaces/vmdb2-nic",
            "internal_domain_name_suffix": "2vg4gdi4r0hezbhc3xl1t2rjdf.rx.internal.cloudapp.net",
            "ip_configuration": [
              {
                "name": "internal",
                "primary": true,
                "private_ip_address": "10.121.20.4",
                "private_ip_address_allocation": "Dynamic",
                "private_ip_address_version": "IPv4",
                "subnet_id": "/subscriptions/4320f689-5133-4260-b235-d02cc16611ff/resourceGroups/rg-hub-net-ci-001/providers/Microsoft.Network/virtualNetworks/vnet-uat-net-ci-001/subnets/sn-uat-db-ci-001"
              }
            ],
            "location": "centralindia",
            "mac_address": "60-45-BD-AC-41-33",
            "name": "vmdb2-nic",
            "private_ip_address": "10.121.20.4",
            "private_ip_addresses": [
              "10.121.20.4"
            ],
            "resource_group_name": "rg-uat-db-ci-001",
            "virtual_machine_id": "/subscriptions/4320f689-5133-4260-b235-d02cc16611ff/resourceGroups/rg-uat-db-ci-001/providers/Microsoft.Compute/virtualMachines/GEMAZUATDB02"
          },
          "dependencies": [
            "azurerm_subnet.sndb"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_interface",
      "name": "nicdb3",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "enable_accelerated_networking": false,
            "enable_ip_forwarding": false,
            "id": "/subscriptions/4320f689-5133-4260-b235-d02cc16611ff/resourceGroups/rg-uat-db-ci-001/providers/Microsoft.Network/networkInterfaces/vmdb3-nic",
            "internal_domain_name_suffix": "2vg4gdi4r0hezbhc3xl1t2rjdf.rx.internal.cloudapp.net",
            "ip_configuration": [
              {
                "name": "internal",
                "primary": true,
                "private_ip_address": "10.121.20.6",
                "private_ip_address_allocation": "Dynamic",
                "private_ip_address_version": "IPv4",
                "subnet_id": "/subscriptions/4320f689-5133-4260-b235-d02cc16611ff/resourceGroups/rg-hub-net-ci-001/providers/Microsoft.Network/virtualNetworks/vnet-uat-net-ci-001/subnets/sn-uat-db-ci-001"
              }
            ],
            "location": "centralindia",
            "mac_address": "00-0D-3A-F0-00-23",
            "name": "vmdb3-nic",
            "private_ip_address": "10.121.20.6",
            "private_ip_addresses": [
              "10.121.20.6"
            ],
            "resource_group_name": "rg-uat-db-ci-001",
            "virtual_machine_id": "/subscriptions/4320f689-5133-4260-b235-d02cc16611ff/resourceGroups/rg-uat-db-ci-001/providers/Microsoft.Compute/virtualMachines/GEMAZUATDB03"
          },
          "dependencies": [
            "azurerm_subnet.sndb"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_interface",
      "name": "nicjava051",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "enable_accelerated_networking": false,
            "enable_ip_forwarding": false,
            "id": "/subscriptions/4320f689-5133-4260-b235-d02cc16611ff/resourceGroups/rg-uat-app-ci-001/providers/Microsoft.Network/networkInterfaces/vmjava051-nic",
            "internal_domain_name_suffix": "2vg4gdi4r0hezbhc3xl1t2rjdf.rx.internal.cloudapp.net",
            "ip_configuration": [
              {
                "name": "internal",
                "primary": true,
                "private_ip_address": "10.121.16.15",
                "private_ip_address_allocation": "Dynamic",
                "private_ip_address_version": "IPv4",
                "subnet_id": "/subscriptions/4320f689-5133-4260-b235-d02cc16611ff/resourceGroups/rg-hub-net-ci-001/providers/Microsoft.Network/virtualNetworks/vnet-uat-net-ci-001/subnets/sn-uat-app-ci-001"
              }
            ],
            "location": "centralindia",
            "mac_address": "60-45-BD-AD-58-F2",
            "name": "vmjava051-nic",
            "private_ip_address": "10.121.16.15",
            "private_ip_addresses": [
              "10.121.16.15"
            ],
            "resource_group_name": "rg-uat-app-ci-001",
            "virtual_machine_id": "/subscriptions/4320f689-5133-4260-b235-d02cc16611ff/resourceGroups/rg-uat-app-ci-001/providers/Microsoft.Compute/virtualMachines/GEMAZUATAJAVA005-1"
          },
          "dependencies": [
            "azurerm_subnet.snapp1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_interface",
      "name": "nicjava052",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "enable_accelerated_networking": false,
            "enable_ip_forwarding": false,
            "id": "/subscriptions/4320f689-5133-4260-b235-d02cc16611ff/resourceGroups/rg-uat-app-ci-001/providers/Microsoft.Network/networkInterfaces/vmjava052-nic",
            "internal_domain_name_suffix": "2vg4gdi4r0hezbhc3xl1t2rjdf.rx.internal.cloudapp.net",
            "ip_configuration": [
              {
                "name": "internal",
                "primary": true,
                "private_ip_address": "10.121.16.16",
                "private_ip_address_allocation": "Dynamic",
                "private_ip_address_version": "IPv4",
                "subnet_id": "/subscriptions/4320f689-5133-4260-b235-d02cc16611ff/resourceGroups/rg-hub-net-ci-001/providers/Microsoft.Network/virtualNetworks/vnet-uat-net-ci-001/subnets/sn-uat-app-ci-001"
              }
            ],
            "location": "centralindia",
            "mac_address": "60-45-BD-AD-5C-D8",
            "name": "vmjava052-nic",
            "private_ip_address": "10.121.16.16",
            "private_ip_addresses": [
              "10.121.16.16"
            ],
            "resource_group_name": "rg-uat-app-ci-001",
            "virtual_machine_id": "/subscriptions/4320f689-5133-4260-b235-d02cc16611ff/resourceGroups/rg-uat-app-ci-001/providers/Microsoft.Compute/virtualMachines/GEMAZUATAJAVA005-2"
          },
          "dependencies": [
            "azurerm_subnet.snapp1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_interface",
      "name": "nicjava11",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "enable_accelerated_networking": false,
            "enable_ip_forwarding": false,
            "id": "/subscriptions/4320f689-5133-4260-b235-d02cc16611ff/resourceGroups/rg-uat-app-ci-001/providers/Microsoft.Network/networkInterfaces/vmjava11-nic",
            "internal_domain_name_suffix": "2vg4gdi4r0hezbhc3xl1t2rjdf.rx.internal.cloudapp.net",
            "ip_configuration": [
              {
                "name": "internal",
                "primary": true,
                "private_ip_address": "10.121.16.5",
                "private_ip_address_allocation": "Dynamic",
                "private_ip_address_version": "IPv4",
                "subnet_id": "/subscriptions/4320f689-5133-4260-b235-d02cc16611ff/resourceGroups/rg-hub-net-ci-001/providers/Microsoft.Network/virtualNetworks/vnet-uat-net-ci-001/subnets/sn-uat-app-ci-001"
              }
            ],
            "location": "centralindia",
            "mac_address": "60-45-BD-A5-51-9C",
            "name": "vmjava11-nic",
            "private_ip_address": "10.121.16.5",
            "private_ip_addresses": [
              "10.121.16.5"
            ],
            "resource_group_name": "rg-uat-app-ci-001",
            "virtual_machine_id": "/subscriptions/4320f689-5133-4260-b235-d02cc16611ff/resourceGroups/rg-uat-app-ci-001/providers/Microsoft.Compute/virtualMachines/GEMAZUATAJAVA01-1"
          },
          "dependencies": [
            "azurerm_subnet.snapp1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_interface",
      "name": "nicjava12",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "enable_accelerated_networking": false,
            "enable_ip_forwarding": false,
            "id": "/subscriptions/4320f689-5133-4260-b235-d02cc16611ff/resourceGroups/rg-uat-app-ci-001/providers/Microsoft.Network/networkInterfaces/vmjava12-nic",
            "internal_domain_name_suffix": "2vg4gdi4r0hezbhc3xl1t2rjdf.rx.internal.cloudapp.net",
            "ip_configuration": [
              {
                "name": "internal",
                "primary": true,
                "private_ip_address": "10.121.16.4",
                "private_ip_address_allocation": "Dynamic",
                "private_ip_address_version": "IPv4",
                "subnet_id": "/subscriptions/4320f689-5133-4260-b235-d02cc16611ff/resourceGroups/rg-hub-net-ci-001/providers/Microsoft.Network/virtualNetworks/vnet-uat-net-ci-001/subnets/sn-uat-app-ci-001"
              }
            ],
            "location": "centralindia",
            "mac_address": "60-45-BD-A5-53-93",
            "name": "vmjava12-nic",
            "private_ip_address": "10.121.16.4",
            "private_ip_addresses": [
              "10.121.16.4"
            ],
            "resource_group_name": "rg-uat-app-ci-001",
            "virtual_machine_id": "/subscriptions/4320f689-5133-4260-b235-d02cc16611ff/resourceGroups/rg-uat-app-ci-001/providers/Microsoft.Compute/virtualMachines/GEMAZUATAJAVA01-2"
          },
          "dependencies": [
            "azurerm_subnet.snapp1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_interface",
      "name": "nicjava21",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "enable_accelerated_networking": false,
            "enable_ip_forwarding": false,
            "id": "/subscriptions/4320f689-5133-4260-b235-d02cc16611ff/resourceGroups/rg-uat-app-ci-001/providers/Microsoft.Network/networkInterfaces/vmjava21-nic",
            "internal_domain_name_suffix": "2vg4gdi4r0hezbhc3xl1t2rjdf.rx.internal.cloudapp.net",
            "ip_configuration": [
              {
                "name": "internal",
                "primary": true,
                "private_ip_address": "10.121.16.7",
                "private_ip_address_allocation": "Dynamic",
                "private_ip_address_version": "IPv4",
                "subnet_id": "/subscriptions/4320f689-5133-4260-b235-d02cc16611ff/resourceGroups/rg-hub-net-ci-001/providers/Microsoft.Network/virtualNetworks/vnet-uat-net-ci-001/subnets/sn-uat-app-ci-001"
              }
            ],
            "location": "centralindia",
            "mac_address": "60-45-BD-AA-B2-96",
            "name": "vmjava21-nic",
            "private_ip_address": "10.121.16.7",
            "private_ip_addresses": [
              "10.121.16.7"
            ],
            "resource_group_name": "rg-uat-app-ci-001",
            "virtual_machine_id": "/subscriptions/4320f689-5133-4260-b235-d02cc16611ff/resourceGroups/rg-uat-app-ci-001/providers/Microsoft.Compute/virtualMachines/GEMAZUATAJAVA02-1"
          },
          "dependencies": [
            "azurerm_subnet.snapp1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_interface",
      "name": "nicjava22",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "enable_accelerated_networking": false,
            "enable_ip_forwarding": false,
            "id": "/subscriptions/4320f689-5133-4260-b235-d02cc16611ff/resourceGroups/rg-uat-app-ci-001/providers/Microsoft.Network/networkInterfaces/vmjava22-nic",
            "internal_domain_name_suffix": "2vg4gdi4r0hezbhc3xl1t2rjdf.rx.internal.cloudapp.net",
            "ip_configuration": [
              {
                "name": "internal",
                "primary": true,
                "private_ip_address": "10.121.16.6",
                "private_ip_address_allocation": "Dynamic",
                "private_ip_address_version": "IPv4",
                "subnet_id": "/subscriptions/4320f689-5133-4260-b235-d02cc16611ff/resourceGroups/rg-hub-net-ci-001/providers/Microsoft.Network/virtualNetworks/vnet-uat-net-ci-001/subnets/sn-uat-app-ci-001"
              }
            ],
            "location": "centralindia",
            "mac_address": "60-45-BD-AA-B8-DC",
            "name": "vmjava22-nic",
            "private_ip_address": "10.121.16.6",
            "private_ip_addresses": [
              "10.121.16.6"
            ],
            "resource_group_name": "rg-uat-app-ci-001",
            "virtual_machine_id": "/subscriptions/4320f689-5133-4260-b235-d02cc16611ff/resourceGroups/rg-uat-app-ci-001/providers/Microsoft.Compute/virtualMachines/GEMAZUATAJAVA02-2"
          },
          "dependencies": [
            "azurerm_subnet.snapp1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_interface",
      "name": "nicjava31",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "enable_accelerated_networking": false,
            "enable_ip_forwarding": false,
            "id": "/subscriptions/4320f689-5133-4260-b235-d02cc16611ff/resourceGroups/rg-uat-app-ci-001/providers/Microsoft.Network/networkInterfaces/vmjava31-nic",
            "internal_domain_name_suffix": "2vg4gdi4r0hezbhc3xl1t2rjdf.rx.internal.cloudapp.net",
            "ip_configuration": [
              {
                "name": "internal",
                "primary": true,
                "private_ip_address": "10.121.16.10",
                "private_ip_address_allocation": "Dynamic",
                "private_ip_address_version": "IPv4",
                "subnet_id": "/subscriptions/4320f689-5133-4260-b235-d02cc16611ff/resourceGroups/rg-hub-net-ci-001/providers/Microsoft.Network/virtualNetworks/vnet-uat-net-ci-001/subnets/sn-uat-app-ci-001"
              }
            ],
            "location": "centralindia",
            "mac_address": "60-45-BD-AC-35-47",
            "name": "vmjava31-nic",
            "private_ip_address": "10.121.16.10",
            "private_ip_addresses": [
              "10.121.16.10"
            ],
            "resource_group_name": "rg-uat-app-ci-001",
            "virtual_machine_id": "/subscriptions/4320f689-5133-4260-b235-d02cc16611ff/resourceGroups/rg-uat-app-ci-001/providers/Microsoft.Compute/virtualMachines/GEMAZUATAJAVA03-1"
          },
          "dependencies": [
            "azurerm_subnet.snapp1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_interface",
      "name": "nicjava32",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "enable_accelerated_networking": false,
            "enable_ip_forwarding": false,
            "id": "/subscriptions/4320f689-5133-4260-b235-d02cc16611ff/resourceGroups/rg-uat-app-ci-001/providers/Microsoft.Network/networkInterfaces/vmjava32-nic",
            "internal_domain_name_suffix": "2vg4gdi4r0hezbhc3xl1t2rjdf.rx.internal.cloudapp.net",
            "ip_configuration": [
              {
                "name": "internal",
                "primary": true,
                "private_ip_address": "10.121.16.8",
                "private_ip_address_allocation": "Dynamic",
                "private_ip_address_version": "IPv4",
                "subnet_id": "/subscriptions/4320f689-5133-4260-b235-d02cc16611ff/resourceGroups/rg-hub-net-ci-001/providers/Microsoft.Network/virtualNetworks/vnet-uat-net-ci-001/subnets/sn-uat-app-ci-001"
              }
            ],
            "location": "centralindia",
            "mac_address": "60-45-BD-AC-37-60",
            "name": "vmjava32-nic",
            "private_ip_address": "10.121.16.8",
            "private_ip_addresses": [
              "10.121.16.8"
            ],
            "resource_group_name": "rg-uat-app-ci-001",
            "virtual_machine_id": "/subscriptions/4320f689-5133-4260-b235-d02cc16611ff/resourceGroups/rg-uat-app-ci-001/providers/Microsoft.Compute/virtualMachines/GEMAZUATAJAVA03-2"
          },
          "dependencies": [
            "azurerm_subnet.snapp1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_interface",
      "name": "nicjava41",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "enable_accelerated_networking": false,
            "enable_ip_forwarding": false,
            "id": "/subscriptions/4320f689-5133-4260-b235-d02cc16611ff/resourceGroups/rg-uat-app-ci-001/providers/Microsoft.Network/networkInterfaces/vmjava41-nic",
            "internal_domain_name_suffix": "2vg4gdi4r0hezbhc3xl1t2rjdf.rx.internal.cloudapp.net",
            "ip_configuration": [
              {
                "name": "internal",
                "primary": true,
                "private_ip_address": "10.121.16.11",
                "private_ip_address_allocation": "Dynamic",
                "private_ip_address_version": "IPv4",
                "subnet_id": "/subscriptions/4320f689-5133-4260-b235-d02cc16611ff/resourceGroups/rg-hub-net-ci-001/providers/Microsoft.Network/virtualNetworks/vnet-uat-net-ci-001/subnets/sn-uat-app-ci-001"
              }
            ],
            "location": "centralindia",
            "mac_address": "60-45-BD-AD-66-0E",
            "name": "vmjava41-nic",
            "private_ip_address": "10.121.16.11",
            "private_ip_addresses": [
              "10.121.16.11"
            ],
            "resource_group_name": "rg-uat-app-ci-001",
            "virtual_machine_id": "/subscriptions/4320f689-5133-4260-b235-d02cc16611ff/resourceGroups/rg-uat-app-ci-001/providers/Microsoft.Compute/virtualMachines/GEMAZUATAJAVA04-1"
          },
          "dependencies": [
            "azurerm_subnet.snapp1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_interface",
      "name": "nicjava42",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "enable_accelerated_networking": false,
            "enable_ip_forwarding": false,
            "id": "/subscriptions/4320f689-5133-4260-b235-d02cc16611ff/resourceGroups/rg-uat-app-ci-001/providers/Microsoft.Network/networkInterfaces/vmjava42-nic",
            "internal_domain_name_suffix": "2vg4gdi4r0hezbhc3xl1t2rjdf.rx.internal.cloudapp.net",
            "ip_configuration": [
              {
                "name": "internal",
                "primary": true,
                "private_ip_address": "10.121.16.12",
                "private_ip_address_allocation": "Dynamic",
                "private_ip_address_version": "IPv4",
                "subnet_id": "/subscriptions/4320f689-5133-4260-b235-d02cc16611ff/resourceGroups/rg-hub-net-ci-001/providers/Microsoft.Network/virtualNetworks/vnet-uat-net-ci-001/subnets/sn-uat-app-ci-001"
              }
            ],
            "location": "centralindia",
            "mac_address": "60-45-BD-A5-AA-24",
            "name": "vmjava42-nic",
            "private_ip_address": "10.121.16.12",
            "private_ip_addresses": [
              "10.121.16.12"
            ],
            "resource_group_name": "rg-uat-app-ci-001",
            "virtual_machine_id": "/subscriptions/4320f689-5133-4260-b235-d02cc16611ff/resourceGroups/rg-uat-app-ci-001/providers/Microsoft.Compute/virtualMachines/GEMAZUATAJAVA04-2"
          },
          "dependencies": [
            "azurerm_subnet.snapp1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_interface",
      "name": "nicjava51",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "enable_accelerated_networking": false,
            "enable_ip_forwarding": false,
            "id": "/subscriptions/4320f689-5133-4260-b235-d02cc16611ff/resourceGroups/rg-uat-app-ci-001/providers/Microsoft.Network/networkInterfaces/vmjava51-nic",
            "internal_domain_name_suffix": "2vg4gdi4r0hezbhc3xl1t2rjdf.rx.internal.cloudapp.net",
            "ip_configuration": [
              {
                "name": "internal",
                "primary": true,
                "private_ip_address": "10.121.16.13",
                "private_ip_address_allocation": "Dynamic",
                "private_ip_address_version": "IPv4",
                "subnet_id": "/subscriptions/4320f689-5133-4260-b235-d02cc16611ff/resourceGroups/rg-hub-net-ci-001/providers/Microsoft.Network/virtualNetworks/vnet-uat-net-ci-001/subnets/sn-uat-app-ci-001"
              }
            ],
            "location": "centralindia",
            "mac_address": "60-45-BD-AA-A3-5C",
            "name": "vmjava51-nic",
            "private_ip_address": "10.121.16.13",
            "private_ip_addresses": [
              "10.121.16.13"
            ],
            "resource_group_name": "rg-uat-app-ci-001",
            "virtual_machine_id": "/subscriptions/4320f689-5133-4260-b235-d02cc16611ff/resourceGroups/rg-uat-app-ci-001/providers/Microsoft.Compute/virtualMachines/GEMAZUATAJAVA05-1"
          },
          "dependencies": [
            "azurerm_subnet.snapp1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_interface",
      "name": "nicjava52",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "enable_accelerated_networking": false,
            "enable_ip_forwarding": false,
            "id": "/subscriptions/4320f689-5133-4260-b235-d02cc16611ff/resourceGroups/rg-uat-app-ci-001/providers/Microsoft.Network/networkInterfaces/vmjava52-nic",
            "internal_domain_name_suffix": "2vg4gdi4r0hezbhc3xl1t2rjdf.rx.internal.cloudapp.net",
            "ip_configuration": [
              {
                "name": "internal",
                "primary": true,
                "private_ip_address": "10.121.16.14",
                "private_ip_address_allocation": "Dynamic",
                "private_ip_address_version": "IPv4",
                "subnet_id": "/subscriptions/4320f689-5133-4260-b235-d02cc16611ff/resourceGroups/rg-hub-net-ci-001/providers/Microsoft.Network/virtualNetworks/vnet-uat-net-ci-001/subnets/sn-uat-app-ci-001"
              }
            ],
            "location": "centralindia",
            "mac_address": "60-45-BD-AD-6B-1E",
            "name": "vmjava52-nic",
            "private_ip_address": "10.121.16.14",
            "private_ip_addresses": [
              "10.121.16.14"
            ],
            "resource_group_name": "rg-uat-app-ci-001",
            "virtual_machine_id": "/subscriptions/4320f689-5133-4260-b235-d02cc16611ff/resourceGroups/rg-uat-app-ci-001/providers/Microsoft.Compute/virtualMachines/GEMAZUATAJAVA05-2"
          },
          "dependencies": [
            "azurerm_subnet.snapp1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_interface",
      "name": "nicjh1",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "enable_accelerated_networking": false,
            "enable_ip_forwarding": false,
            "id": "/subscriptions/4320f689-5133-4260-b235-d02cc16611ff/resourceGroups/rg-uat-aks-ci-001/providers/Microsoft.Network/networkInterfaces/vmjh1-nic",
            "internal_domain_name_suffix": "2vg4gdi4r0hezbhc3xl1t2rjdf.rx.internal.cloudapp.net",
            "ip_configuration": [
              {
                "name": "internal",
                "primary": true,
                "private_ip_address": "10.121.24.5",
                "private_ip_address_allocation": "Dynamic",
                "private_ip_address_version": "IPv4",
                "subnet_id": "/subscriptions/4320f689-5133-4260-b235-d02cc16611ff/resourceGroups/rg-hub-net-ci-001/providers/Microsoft.Network/virtualNetworks/vnet-uat-net-ci-001/subnets/sn-uat-aks-ci-001"
              }
            ],
            "location": "centralindia",
            "mac_address": "60-45-BD-72-42-20",
            "name": "vmjh1-nic",
            "private_ip_address": "10.121.24.5",
            "private_ip_addresses": [
              "10.121.24.5"
            ],
            "resource_group_name": "rg-uat-aks-ci-001",
            "virtual_machine_id": "/subscriptions/4320f689-5133-4260-b235-d02cc16611ff/resourceGroups/rg-uat-aks-ci-001/providers/Microsoft.Compute/virtualMachines/GEMAZUATJUMPHOST"
          },
          "dependencies": [
            "azurerm_subnet.snaks"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_interface",
      "name": "nicphp11",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "enable_accelerated_networking": false,
            "enable_ip_forwarding": false,
            "id": "/subscriptions/4320f689-5133-4260-b235-d02cc16611ff/resourceGroups/rg-uat-app-ci-001/providers/Microsoft.Network/networkInterfaces/vmphp11-nic",
            "internal_domain_name_suffix": "2vg4gdi4r0hezbhc3xl1t2rjdf.rx.internal.cloudapp.net",
            "ip_configuration": [
              {
                "name": "internal",
                "primary": true,
                "private_ip_address": "10.121.16.17",
                "private_ip_address_allocation": "Dynamic",
                "private_ip_address_version": "IPv4",
                "subnet_id": "/subscriptions/4320f689-5133-4260-b235-d02cc16611ff/resourceGroups/rg-hub-net-ci-001/providers/Microsoft.Network/virtualNetworks/vnet-uat-net-ci-001/subnets/sn-uat-app-ci-001"
              }
            ],
            "location": "centralindia",
            "mac_address": "60-45-BD-AC-36-D9",
            "name": "vmphp11-nic",
            "private_ip_address": "10.121.16.17",
            "private_ip_addresses": [
              "10.121.16.17"
            ],
            "resource_group_name": "rg-uat-app-ci-001",
            "virtual_machine_id": "/subscriptions/4320f689-5133-4260-b235-d02cc16611ff/resourceGroups/rg-uat-app-ci-001/providers/Microsoft.Compute/virtualMachines/GEMAZUATAPHP01-1"
          },
          "dependencies": [
            "azurerm_subnet.snapp1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_interface",
      "name": "nicphp12",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "enable_accelerated_networking": false,
            "enable_ip_forwarding": false,
            "id": "/subscriptions/4320f689-5133-4260-b235-d02cc16611ff/resourceGroups/rg-uat-app-ci-001/providers/Microsoft.Network/networkInterfaces/vmphp12-nic",
            "internal_domain_name_suffix": "2vg4gdi4r0hezbhc3xl1t2rjdf.rx.internal.cloudapp.net",
            "ip_configuration": [
              {
                "name": "internal",
                "primary": true,
                "private_ip_address": "10.121.16.9",
                "private_ip_address_allocation": "Dynamic",
                "private_ip_address_version": "IPv4",
                "subnet_id": "/subscriptions/4320f689-5133-4260-b235-d02cc16611ff/resourceGroups/rg-hub-net-ci-001/providers/Microsoft.Network/virtualNetworks/vnet-uat-net-ci-001/subnets/sn-uat-app-ci-001"
              }
            ],
            "location": "centralindia",
            "mac_address": "60-45-BD-72-96-24",
            "name": "vmphp12-nic",
            "private_ip_address": "10.121.16.9",
            "private_ip_addresses": [
              "10.121.16.9"
            ],
            "resource_group_name": "rg-uat-app-ci-001",
            "virtual_machine_id": "/subscriptions/4320f689-5133-4260-b235-d02cc16611ff/resourceGroups/rg-uat-app-ci-001/providers/Microsoft.Compute/virtualMachines/GEMAZUATAPHP01-2"
          },
          "dependencies": [
            "azurerm_subnet.snapp1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_interface",
      "name": "nicphp21",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "enable_accelerated_networking": false,
            "enable_ip_forwarding": false,
            "id": "/subscriptions/4320f689-5133-4260-b235-d02cc16611ff/resourceGroups/rg-uat-app-ci-002/providers/Microsoft.Network/networkInterfaces/vmphp21-nic",
            "internal_domain_name_suffix": "2vg4gdi4r0hezbhc3xl1t2rjdf.rx.internal.cloudapp.net",
            "ip_configuration": [
              {
                "name": "internal",
                "primary": true,
                "private_ip_address": "10.121.18.4",
                "private_ip_address_allocation": "Dynamic",
                "private_ip_address_version": "IPv4",
                "subnet_id": "/subscriptions/4320f689-5133-4260-b235-d02cc16611ff/resourceGroups/rg-hub-net-ci-001/providers/Microsoft.Network/virtualNetworks/vnet-uat-net-ci-001/subnets/sn-uat-app-ci-002"
              }
            ],
            "location": "centralindia",
            "mac_address": "60-45-BD-72-4E-43",
            "name": "vmphp21-nic",
            "private_ip_address": "10.121.18.4",
            "private_ip_addresses": [
              "10.121.18.4"
            ],
            "resource_group_name": "rg-uat-app-ci-002",
            "virtual_machine_id": "/subscriptions/4320f689-5133-4260-b235-d02cc16611ff/resourceGroups/rg-uat-app-ci-002/providers/Microsoft.Compute/virtualMachines/GEMAZUATAPHP02-1"
          },
          "dependencies": [
            "azurerm_subnet.snapp2"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_interface",
      "name": "nicphp22",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "enable_accelerated_networking": false,
            "enable_ip_forwarding": false,
            "id": "/subscriptions/4320f689-5133-4260-b235-d02cc16611ff/resourceGroups/rg-uat-app-ci-002/providers/Microsoft.Network/networkInterfaces/vmphp22-nic",
            "internal_domain_name_suffix": "2vg4gdi4r0hezbhc3xl1t2rjdf.rx.internal.cloudapp.net",
            "ip_configuration": [
              {
                "name": "internal",
                "primary": true,
                "private_ip_address": "10.121.18.5",
                "private_ip_address_allocation": "Dynamic",
                "private_ip_address_version": "IPv4",
                "subnet_id": "/subscriptions/4320f689-5133-4260-b235-d02cc16611ff/resourceGroups/rg-hub-net-ci-001/providers/Microsoft.Network/virtualNetworks/vnet-uat-net-ci-001/subnets/sn-uat-app-ci-002"
              }
            ],
            "location": "centralindia",
            "mac_address": "60-45-BD-AD-0E-3A",
            "name": "vmphp22-nic",
            "private_ip_address": "10.121.18.5",
            "private_ip_addresses": [
              "10.121.18.5"
            ],
            "resource_group_name": "rg-uat-app-ci-002",
            "virtual_machine_id": "/subscriptions/4320f689-5133-4260-b235-d02cc16611ff/resourceGroups/rg-uat-app-ci-002/providers/Microsoft.Compute/virtualMachines/GEMAZUATAPHP02-2"
          },
          "dependencies": [
            "azurerm_subnet.snapp2"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_group",
      "name": "nsgaks",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/4320f689-5133-4260-b235-d02cc16611ff/resourceGroups/rg-uat-aks-ci-001/providers/Microsoft.Network/networkSecurityGroups/nsg-uat-aks-ci-001",
            "location": "centralindia",
            "name": "nsg-uat-aks-ci-001",
            "resource_group_name": "rg-uat-aks-ci-001",
            "security_rule": [
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "",
                "destination_address_prefixes": [
                  "10.121.24.0/22"
                ],
                "destination_application_security_group_ids": [],
                "destination_port_range": "*",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "Allow_In_Bastion",
                "priority": 4095,
                "protocol": "*",
                "source_address_prefix": "10.121.1.0/26",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              },
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "",
                "destination_address_prefixes": [
                  "10.121.27.203",
                  "10.121.27.204"
                ],
                "destination_application_security_group_ids": [],
                "destination_port_range": "",
                "destination_port_ranges": [
                  "443",
                  "80"
                ],
                "direction": "Inbound",
                "name": "Allow_In_AppGWLBAKS",
                "priority": 101,
                "protocol": "TCP",
                "source_address_prefix": "10.121.0.128/26",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              },
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "10.121.24.0/22",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "",
                "destination_port_ranges": [
                  "443",
                  "80"
                ],
                "direction": "Inbound",
                "name": "Allow_In_LBAKSCL1_2",
                "priority": 100,
                "protocol": "TCP",
                "source_address_prefix": "",
                "source_address_prefixes": [
                  "10.121.27.203",
                  "10.121.27.204"
                ],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              },
              {
                "access": "Deny",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "*",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "Block_In_All",
                "priority": 4096,
                "protocol": "*",
                "source_address_prefix": "*",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              }
            ],
            "tags": {},
            "timeouts": null
          },
          "sensitive_attributes": []
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_group",
      "name": "nsgapp1",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/4320f689-5133-4260-b235-d02cc16611ff/resourceGroups/rg-uat-app-ci-001/providers/Microsoft.Network/networkSecurityGroups/nsg-uat-app-ci-001",
            "location": "centralindia",
            "name": "nsg-uat-app-ci-001",
            "resource_group_name": "rg-uat-app-ci-001",
            "security_rule": [
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "",
                "destination_address_prefixes": [
                  "10.121.16.0/24"
                ],
                "destination_application_security_group_ids": [],
                "destination_port_range": "*",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "Allow_In_Bastion",
                "priority": 4095,
                "protocol": "*",
                "source_address_prefix": "10.121.1.0/26",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              },
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "",
                "destination_address_prefixes": [
                  "10.121.16.10",
                  "10.121.16.8"
                ],
                "destination_application_security_group_ids": [],
                "destination_port_range": "",
                "destination_port_ranges": [
                  "8080",
                  "8280"
                ],
                "direction": "Inbound",
                "name": "Allow_In_LBJava3",
                "priority": 103,
                "protocol": "TCP",
                "source_address_prefix": "10.121.16.204",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              },
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "",
                "destination_address_prefixes": [
                  "10.121.16.11",
                  "10.121.16.12"
                ],
                "destination_application_security_group_ids": [],
                "destination_port_range": "8080",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "Allow_In_LBJava4",
                "priority": 104,
                "protocol": "TCP",
                "source_address_prefix": "10.121.16.205",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              },
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "",
                "destination_address_prefixes": [
                  "10.121.16.13",
                  "10.121.16.14"
                ],
                "destination_application_security_group_ids": [],
                "destination_port_range": "",
                "destination_port_ranges": [
                  "8080",
                  "8430"
                ],
                "direction": "Inbound",
                "name": "Allow_In_LBJava5",
                "priority": 105,
                "protocol": "TCP",
                "source_address_prefix": "10.121.16.206",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              },
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "",
                "destination_address_prefixes": [
                  "10.121.16.15",
                  "10.121.16.16"
                ],
                "destination_application_security_group_ids": [],
                "destination_port_range": "80",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "Allow_In_LBJava05",
                "priority": 106,
                "protocol": "TCP",
                "source_address_prefix": "10.121.16.207",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              },
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "",
                "destination_address_prefixes": [
                  "10.121.16.17",
                  "10.121.16.9"
                ],
                "destination_application_security_group_ids": [],
                "destination_port_range": "",
                "destination_port_ranges": [
                  "8081",
                  "8082",
                  "8083"
                ],
                "direction": "Inbound",
                "name": "Allow_In_LBPHP1",
                "priority": 100,
                "protocol": "TCP",
                "source_address_prefix": "10.121.16.201",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              },
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "",
                "destination_address_prefixes": [
                  "10.121.16.201",
                  "10.121.16.202",
                  "10.121.16.203",
                  "10.121.16.204",
                  "10.121.16.205",
                  "10.121.16.206",
                  "10.121.16.207"
                ],
                "destination_application_security_group_ids": [],
                "destination_port_range": "",
                "destination_port_ranges": [
                  "80",
                  "8080",
                  "8081",
                  "8082",
                  "8083",
                  "8180",
                  "8280",
                  "8430",
                  "8483"
                ],
                "direction": "Inbound",
                "name": "Allow_In_AppGWLBApp1",
                "priority": 107,
                "protocol": "TCP",
                "source_address_prefix": "10.121.0.128/26",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              },
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "",
                "destination_address_prefixes": [
                  "10.121.16.4",
                  "10.121.16.5"
                ],
                "destination_application_security_group_ids": [],
                "destination_port_range": "8180",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "Allow_In_LBJava1",
                "priority": 101,
                "protocol": "TCP",
                "source_address_prefix": "10.121.16.202",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              },
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "",
                "destination_address_prefixes": [
                  "10.121.16.6",
                  "10.121.16.7"
                ],
                "destination_application_security_group_ids": [],
                "destination_port_range": "",
                "destination_port_ranges": [
                  "8180",
                  "8483"
                ],
                "direction": "Inbound",
                "name": "Allow_In_LBJava2",
                "priority": 102,
                "protocol": "TCP",
                "source_address_prefix": "10.121.16.203",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              },
              {
                "access": "Deny",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "*",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "Block_In_All",
                "priority": 4096,
                "protocol": "*",
                "source_address_prefix": "*",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              }
            ],
            "tags": {},
            "timeouts": null
          },
          "sensitive_attributes": []
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_group",
      "name": "nsgapp2",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/4320f689-5133-4260-b235-d02cc16611ff/resourceGroups/rg-uat-app-ci-002/providers/Microsoft.Network/networkSecurityGroups/nsg-uat-app-ci-002",
            "location": "centralindia",
            "name": "nsg-uat-app-ci-002",
            "resource_group_name": "rg-uat-app-ci-002",
            "security_rule": [
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "",
                "destination_address_prefixes": [
                  "10.121.18.0/24"
                ],
                "destination_application_security_group_ids": [],
                "destination_port_range": "*",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "Allow_In_Bastion",
                "priority": 4095,
                "protocol": "*",
                "source_address_prefix": "10.121.1.0/26",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              },
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "",
                "destination_address_prefixes": [
                  "10.121.18.4",
                  "10.121.18.5"
                ],
                "destination_application_security_group_ids": [],
                "destination_port_range": "8081",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "Allow_In_LBPHP2",
                "priority": 100,
                "protocol": "TCP",
                "source_address_prefix": "10.121.18.201",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              },
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "10.121.18.201",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "8081",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "Allow_In_AppGWLBApp2",
                "priority": 101,
                "protocol": "TCP",
                "source_address_prefix": "10.121.0.128/26",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              },
              {
                "access": "Deny",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "*",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "Block_In_All",
                "priority": 4096,
                "protocol": "*",
                "source_address_prefix": "*",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              }
            ],
            "tags": {},
            "timeouts": null
          },
          "sensitive_attributes": []
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_group",
      "name": "nsgdb",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/4320f689-5133-4260-b235-d02cc16611ff/resourceGroups/rg-uat-db-ci-001/providers/Microsoft.Network/networkSecurityGroups/nsg-uat-db-ci-001",
            "location": "centralindia",
            "name": "nsg-uat-db-ci-001",
            "resource_group_name": "rg-uat-db-ci-001",
            "security_rule": [
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "",
                "destination_address_prefixes": [
                  "10.121.20.0/24"
                ],
                "destination_application_security_group_ids": [],
                "destination_port_range": "*",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "Allow_In_Bastion",
                "priority": 4095,
                "protocol": "*",
                "source_address_prefix": "10.121.1.0/26",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              },
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "",
                "destination_address_prefixes": [
                  "10.121.20.4",
                  "10.121.20.5",
                  "10.121.20.6"
                ],
                "destination_application_security_group_ids": [],
                "destination_port_range": "3306",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "Allow_In_3306",
                "priority": 100,
                "protocol": "TCP",
                "source_address_prefix": "",
                "source_address_prefixes": [
                  "10.121.16.10",
                  "10.121.16.11",
                  "10.121.16.12",
                  "10.121.16.13",
                  "10.121.16.14",
                  "10.121.16.15",
                  "10.121.16.16",
                  "10.121.16.17",
                  "10.121.16.4",
                  "10.121.16.5",
                  "10.121.16.6",
                  "10.121.16.7",
                  "10.121.16.8",
                  "10.121.16.9",
                  "10.121.18.4",
                  "10.121.20.4",
                  "10.121.20.5",
                  "10.121.20.6",
                  "10.121.24.0/22"
                ],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              },
              {
                "access": "Deny",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "*",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "Block_In_All",
                "priority": 4096,
                "protocol": "*",
                "source_address_prefix": "*",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              }
            ],
            "tags": {},
            "timeouts": null
          },
          "sensitive_attributes": []
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_group",
      "name": "nsgss",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/4320f689-5133-4260-b235-d02cc16611ff/resourceGroups/rg-hub-ss-ci-001/providers/Microsoft.Network/networkSecurityGroups/nsg-hub-ss-ci-001",
            "location": "centralindia",
            "name": "nsg-hub-ss-ci-001",
            "resource_group_name": "rg-hub-ss-ci-001",
            "security_rule": [
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "",
                "destination_address_prefixes": [
                  "10.121.1.128/25"
                ],
                "destination_application_security_group_ids": [],
                "destination_port_range": "*",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "Allow_In_Bastion",
                "priority": 4095,
                "protocol": "*",
                "source_address_prefix": "10.121.1.0/26",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              },
              {
                "access": "Deny",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "*",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "Block_In_All",
                "priority": 4096,
                "protocol": "*",
                "source_address_prefix": "*",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              }
            ],
            "tags": {},
            "timeouts": null
          },
          "sensitive_attributes": []
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_route_table",
      "name": "udraks",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "disable_bgp_route_propagation": false,
            "id": "/subscriptions/4320f689-5133-4260-b235-d02cc16611ff/resourceGroups/rg-uat-aks-ci-001/providers/Microsoft.Network/routeTables/udr-uat-aks-ci-001",
            "location": "centralindia",
            "name": "udr-uat-aks-ci-001",
            "resource_group_name": "rg-uat-aks-ci-001",
            "route": [
              {
                "address_prefix": "0.0.0.0/0",
                "name": "rt_to_internet",
                "next_hop_in_ip_address": "10.121.0.4",
                "next_hop_type": "VirtualAppliance"
              }
            ],
            "subnets": [
              "/subscriptions/4320f689-5133-4260-b235-d02cc16611ff/resourceGroups/rg-hub-net-ci-001/providers/Microsoft.Network/virtualNetworks/vnet-uat-net-ci-001/subnets/sn-uat-aks-ci-001"
            ],
            "tags": {},
            "timeouts": null
          },
          "sensitive_attributes": []
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_route_table",
      "name": "udrapp1",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "disable_bgp_route_propagation": false,
            "id": "/subscriptions/4320f689-5133-4260-b235-d02cc16611ff/resourceGroups/rg-uat-app-ci-001/providers/Microsoft.Network/routeTables/udr-uat-app-ci-001",
            "location": "centralindia",
            "name": "udr-uat-app-ci-001",
            "resource_group_name": "rg-uat-app-ci-001",
            "route": [
              {
                "address_prefix": "0.0.0.0/0",
                "name": "rt_to_internet",
                "next_hop_in_ip_address": "10.121.0.4",
                "next_hop_type": "VirtualAppliance"
              }
            ],
            "subnets": [
              "/subscriptions/4320f689-5133-4260-b235-d02cc16611ff/resourceGroups/rg-hub-net-ci-001/providers/Microsoft.Network/virtualNetworks/vnet-uat-net-ci-001/subnets/sn-uat-app-ci-001"
            ],
            "tags": {},
            "timeouts": null
          },
          "sensitive_attributes": []
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_route_table",
      "name": "udrapp2",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "disable_bgp_route_propagation": false,
            "id": "/subscriptions/4320f689-5133-4260-b235-d02cc16611ff/resourceGroups/rg-uat-app-ci-002/providers/Microsoft.Network/routeTables/udr-uat-app-ci-002",
            "location": "centralindia",
            "name": "udr-uat-app-ci-002",
            "resource_group_name": "rg-uat-app-ci-002",
            "route": [
              {
                "address_prefix": "0.0.0.0/0",
                "name": "rt_to_internet",
                "next_hop_in_ip_address": "10.121.0.4",
                "next_hop_type": "VirtualAppliance"
              }
            ],
            "subnets": [
              "/subscriptions/4320f689-5133-4260-b235-d02cc16611ff/resourceGroups/rg-hub-net-ci-001/providers/Microsoft.Network/virtualNetworks/vnet-uat-net-ci-001/subnets/sn-uat-app-ci-002"
            ],
            "tags": {},
            "timeouts": null
          },
          "sensitive_attributes": []
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_route_table",
      "name": "udrdb",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "disable_bgp_route_propagation": false,
            "id": "/subscriptions/4320f689-5133-4260-b235-d02cc16611ff/resourceGroups/rg-uat-db-ci-001/providers/Microsoft.Network/routeTables/udr-uat-db-ci-001",
            "location": "centralindia",
            "name": "udr-uat-db-ci-001",
            "resource_group_name": "rg-uat-db-ci-001",
            "route": [
              {
                "address_prefix": "0.0.0.0/0",
                "name": "rt_to_internet",
                "next_hop_in_ip_address": "10.121.0.4",
                "next_hop_type": "VirtualAppliance"
              }
            ],
            "subnets": [
              "/subscriptions/4320f689-5133-4260-b235-d02cc16611ff/resourceGroups/rg-hub-net-ci-001/providers/Microsoft.Network/virtualNetworks/vnet-uat-net-ci-001/subnets/sn-uat-db-ci-001"
            ],
            "tags": {},
            "timeouts": null
          },
          "sensitive_attributes": []
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_route_table",
      "name": "udrss",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "disable_bgp_route_propagation": false,
            "id": "/subscriptions/4320f689-5133-4260-b235-d02cc16611ff/resourceGroups/rg-hub-ss-ci-001/providers/Microsoft.Network/routeTables/udr-hub-ss-ci-001",
            "location": "centralindia",
            "name": "udr-hub-ss-ci-001",
            "resource_group_name": "rg-hub-ss-ci-001",
            "route": [
              {
                "address_prefix": "0.0.0.0/0",
                "name": "rt_to_internet",
                "next_hop_in_ip_address": "10.121.0.4",
                "next_hop_type": "VirtualAppliance"
              }
            ],
            "subnets": [
              "/subscriptions/4320f689-5133-4260-b235-d02cc16611ff/resourceGroups/rg-hub-net-ci-001/providers/Microsoft.Network/virtualNetworks/vnet-hub-net-ci-001/subnets/sn-hub-ss-ci-001"
            ],
            "tags": {},
            "timeouts": null
          },
          "sensitive_attributes": []
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "snaks",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefix": "10.121.24.0/22",
            "address_prefixes": [
              "10.121.24.0/22"
            ],
            "enforce_private_link_endpoint_network_policies": true,
            "enforce_private_link_service_network_policies": false,
            "id": "/subscriptions/4320f689-5133-4260-b235-d02cc16611ff/resourceGroups/rg-hub-net-ci-001/providers/Microsoft.Network/virtualNetworks/vnet-uat-net-ci-001/subnets/sn-uat-aks-ci-001",
            "name": "sn-uat-aks-ci-001",
            "resource_group_name": "rg-hub-net-ci-001",
            "virtual_network_name": "vnet-uat-net-ci-001"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "snapp1",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefix": "10.121.16.0/24",
            "address_prefixes": [
              "10.121.16.0/24"
            ],
            "enforce_private_link_endpoint_network_policies": false,
            "enforce_private_link_service_network_policies": false,
            "id": "/subscriptions/4320f689-5133-4260-b235-d02cc16611ff/resourceGroups/rg-hub-net-ci-001/providers/Microsoft.Network/virtualNetworks/vnet-uat-net-ci-001/subnets/sn-uat-app-ci-001",
            "name": "sn-uat-app-ci-001",
            "resource_group_name": "rg-hub-net-ci-001",
            "virtual_network_name": "vnet-uat-net-ci-001"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "snapp2",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefix": "10.121.18.0/24",
            "address_prefixes": [
              "10.121.18.0/24"
            ],
            "enforce_private_link_endpoint_network_policies": false,
            "enforce_private_link_service_network_policies": false,
            "id": "/subscriptions/4320f689-5133-4260-b235-d02cc16611ff/resourceGroups/rg-hub-net-ci-001/providers/Microsoft.Network/virtualNetworks/vnet-uat-net-ci-001/subnets/sn-uat-app-ci-002",
            "name": "sn-uat-app-ci-002",
            "resource_group_name": "rg-hub-net-ci-001",
            "virtual_network_name": "vnet-uat-net-ci-001"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "snappgw",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefix": "10.121.0.128/26",
            "address_prefixes": [
              "10.121.0.128/26"
            ],
            "enforce_private_link_endpoint_network_policies": true,
            "enforce_private_link_service_network_policies": false,
            "id": "/subscriptions/4320f689-5133-4260-b235-d02cc16611ff/resourceGroups/rg-hub-net-ci-001/providers/Microsoft.Network/virtualNetworks/vnet-hub-net-ci-001/subnets/sn-hub-appgw-ci-001",
            "name": "sn-hub-appgw-ci-001",
            "resource_group_name": "rg-hub-net-ci-001",
            "virtual_network_name": "vnet-hub-net-ci-001"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "snbastion",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefix": "10.121.1.0/26",
            "address_prefixes": [
              "10.121.1.0/26"
            ],
            "enforce_private_link_endpoint_network_policies": true,
            "enforce_private_link_service_network_policies": false,
            "id": "/subscriptions/4320f689-5133-4260-b235-d02cc16611ff/resourceGroups/rg-hub-net-ci-001/providers/Microsoft.Network/virtualNetworks/vnet-hub-net-ci-001/subnets/AzureBastionSubnet",
            "name": "AzureBastionSubnet",
            "resource_group_name": "rg-hub-net-ci-001",
            "virtual_network_name": "vnet-hub-net-ci-001"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "sndb",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefix": "10.121.20.0/24",
            "address_prefixes": [
              "10.121.20.0/24"
            ],
            "enforce_private_link_endpoint_network_policies": false,
            "enforce_private_link_service_network_policies": false,
            "id": "/subscriptions/4320f689-5133-4260-b235-d02cc16611ff/resourceGroups/rg-hub-net-ci-001/providers/Microsoft.Network/virtualNetworks/vnet-uat-net-ci-001/subnets/sn-uat-db-ci-001",
            "name": "sn-uat-db-ci-001",
            "resource_group_name": "rg-hub-net-ci-001",
            "virtual_network_name": "vnet-uat-net-ci-001"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "snextfw",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefix": "10.121.0.0/26",
            "address_prefixes": [
              "10.121.0.0/26"
            ],
            "enforce_private_link_endpoint_network_policies": true,
            "enforce_private_link_service_network_policies": false,
            "id": "/subscriptions/4320f689-5133-4260-b235-d02cc16611ff/resourceGroups/rg-hub-net-ci-001/providers/Microsoft.Network/virtualNetworks/vnet-hub-net-ci-001/subnets/AzureFirewallSubnet",
            "name": "AzureFirewallSubnet",
            "resource_group_name": "rg-hub-net-ci-001",
            "virtual_network_name": "vnet-hub-net-ci-001"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "snss",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefix": "10.121.1.128/25",
            "address_prefixes": [
              "10.121.1.128/25"
            ],
            "enforce_private_link_endpoint_network_policies": true,
            "enforce_private_link_service_network_policies": false,
            "id": "/subscriptions/4320f689-5133-4260-b235-d02cc16611ff/resourceGroups/rg-hub-net-ci-001/providers/Microsoft.Network/virtualNetworks/vnet-hub-net-ci-001/subnets/sn-hub-ss-ci-001",
            "name": "sn-hub-ss-ci-001",
            "resource_group_name": "rg-hub-net-ci-001",
            "virtual_network_name": "vnet-hub-net-ci-001"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "snvpngw",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefix": "10.121.0.64/26",
            "address_prefixes": [
              "10.121.0.64/26"
            ],
            "enforce_private_link_endpoint_network_policies": true,
            "enforce_private_link_service_network_policies": false,
            "id": "/subscriptions/4320f689-5133-4260-b235-d02cc16611ff/resourceGroups/rg-hub-net-ci-001/providers/Microsoft.Network/virtualNetworks/vnet-hub-net-ci-001/subnets/GatewaySubnet",
            "name": "GatewaySubnet",
            "resource_group_name": "rg-hub-net-ci-001",
            "virtual_network_name": "vnet-hub-net-ci-001"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet_network_security_group_association",
      "name": "nsgsnaks",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/4320f689-5133-4260-b235-d02cc16611ff/resourceGroups/rg-hub-net-ci-001/providers/Microsoft.Network/virtualNetworks/vnet-uat-net-ci-001/subnets/sn-uat-aks-ci-001",
            "network_security_group_id": "/subscriptions/4320f689-5133-4260-b235-d02cc16611ff/resourceGroups/rg-uat-aks-ci-001/providers/Microsoft.Network/networkSecurityGroups/nsg-uat-aks-ci-001",
            "subnet_id": "/subscriptions/4320f689-5133-4260-b235-d02cc16611ff/resourceGroups/rg-hub-net-ci-001/providers/Microsoft.Network/virtualNetworks/vnet-uat-net-ci-001/subnets/sn-uat-aks-ci-001"
          },
          "dependencies": [
            "azurerm_network_security_group.nsgaks",
            "azurerm_subnet.snaks"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet_network_security_group_association",
      "name": "nsgsnapp1",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/4320f689-5133-4260-b235-d02cc16611ff/resourceGroups/rg-hub-net-ci-001/providers/Microsoft.Network/virtualNetworks/vnet-uat-net-ci-001/subnets/sn-uat-app-ci-001",
            "network_security_group_id": "/subscriptions/4320f689-5133-4260-b235-d02cc16611ff/resourceGroups/rg-uat-app-ci-001/providers/Microsoft.Network/networkSecurityGroups/nsg-uat-app-ci-001",
            "subnet_id": "/subscriptions/4320f689-5133-4260-b235-d02cc16611ff/resourceGroups/rg-hub-net-ci-001/providers/Microsoft.Network/virtualNetworks/vnet-uat-net-ci-001/subnets/sn-uat-app-ci-001"
          },
          "dependencies": [
            "azurerm_network_security_group.nsgapp1",
            "azurerm_subnet.snapp1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet_network_security_group_association",
      "name": "nsgsnapp2",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/4320f689-5133-4260-b235-d02cc16611ff/resourceGroups/rg-hub-net-ci-001/providers/Microsoft.Network/virtualNetworks/vnet-uat-net-ci-001/subnets/sn-uat-app-ci-002",
            "network_security_group_id": "/subscriptions/4320f689-5133-4260-b235-d02cc16611ff/resourceGroups/rg-uat-app-ci-002/providers/Microsoft.Network/networkSecurityGroups/nsg-uat-app-ci-002",
            "subnet_id": "/subscriptions/4320f689-5133-4260-b235-d02cc16611ff/resourceGroups/rg-hub-net-ci-001/providers/Microsoft.Network/virtualNetworks/vnet-uat-net-ci-001/subnets/sn-uat-app-ci-002"
          },
          "dependencies": [
            "azurerm_network_security_group.nsgapp2",
            "azurerm_subnet.snapp2"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet_network_security_group_association",
      "name": "nsgsndb",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/4320f689-5133-4260-b235-d02cc16611ff/resourceGroups/rg-hub-net-ci-001/providers/Microsoft.Network/virtualNetworks/vnet-uat-net-ci-001/subnets/sn-uat-db-ci-001",
            "network_security_group_id": "/subscriptions/4320f689-5133-4260-b235-d02cc16611ff/resourceGroups/rg-uat-db-ci-001/providers/Microsoft.Network/networkSecurityGroups/nsg-uat-db-ci-001",
            "subnet_id": "/subscriptions/4320f689-5133-4260-b235-d02cc16611ff/resourceGroups/rg-hub-net-ci-001/providers/Microsoft.Network/virtualNetworks/vnet-uat-net-ci-001/subnets/sn-uat-db-ci-001"
          },
          "dependencies": [
            "azurerm_network_security_group.nsgdb",
            "azurerm_subnet.sndb"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet_network_security_group_association",
      "name": "nsgsnss",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/4320f689-5133-4260-b235-d02cc16611ff/resourceGroups/rg-hub-net-ci-001/providers/Microsoft.Network/virtualNetworks/vnet-hub-net-ci-001/subnets/sn-hub-ss-ci-001",
            "network_security_group_id": "/subscriptions/4320f689-5133-4260-b235-d02cc16611ff/resourceGroups/rg-hub-ss-ci-001/providers/Microsoft.Network/networkSecurityGroups/nsg-hub-ss-ci-001",
            "subnet_id": "/subscriptions/4320f689-5133-4260-b235-d02cc16611ff/resourceGroups/rg-hub-net-ci-001/providers/Microsoft.Network/virtualNetworks/vnet-hub-net-ci-001/subnets/sn-hub-ss-ci-001"
          },
          "dependencies": [
            "azurerm_network_security_group.nsgss",
            "azurerm_subnet.snss"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet_route_table_association",
      "name": "udrsnaks",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/4320f689-5133-4260-b235-d02cc16611ff/resourceGroups/rg-hub-net-ci-001/providers/Microsoft.Network/virtualNetworks/vnet-uat-net-ci-001/subnets/sn-uat-aks-ci-001",
            "route_table_id": "/subscriptions/4320f689-5133-4260-b235-d02cc16611ff/resourceGroups/rg-uat-aks-ci-001/providers/Microsoft.Network/routeTables/udr-uat-aks-ci-001",
            "subnet_id": "/subscriptions/4320f689-5133-4260-b235-d02cc16611ff/resourceGroups/rg-hub-net-ci-001/providers/Microsoft.Network/virtualNetworks/vnet-uat-net-ci-001/subnets/sn-uat-aks-ci-001"
          },
          "dependencies": [
            "azurerm_route_table.udraks",
            "azurerm_subnet.snaks"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet_route_table_association",
      "name": "udrsnapp1",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/4320f689-5133-4260-b235-d02cc16611ff/resourceGroups/rg-hub-net-ci-001/providers/Microsoft.Network/virtualNetworks/vnet-uat-net-ci-001/subnets/sn-uat-app-ci-001",
            "route_table_id": "/subscriptions/4320f689-5133-4260-b235-d02cc16611ff/resourceGroups/rg-uat-app-ci-001/providers/Microsoft.Network/routeTables/udr-uat-app-ci-001",
            "subnet_id": "/subscriptions/4320f689-5133-4260-b235-d02cc16611ff/resourceGroups/rg-hub-net-ci-001/providers/Microsoft.Network/virtualNetworks/vnet-uat-net-ci-001/subnets/sn-uat-app-ci-001"
          },
          "dependencies": [
            "azurerm_route_table.udrapp1",
            "azurerm_subnet.snapp1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet_route_table_association",
      "name": "udrsnapp2",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/4320f689-5133-4260-b235-d02cc16611ff/resourceGroups/rg-hub-net-ci-001/providers/Microsoft.Network/virtualNetworks/vnet-uat-net-ci-001/subnets/sn-uat-app-ci-002",
            "route_table_id": "/subscriptions/4320f689-5133-4260-b235-d02cc16611ff/resourceGroups/rg-uat-app-ci-002/providers/Microsoft.Network/routeTables/udr-uat-app-ci-002",
            "subnet_id": "/subscriptions/4320f689-5133-4260-b235-d02cc16611ff/resourceGroups/rg-hub-net-ci-001/providers/Microsoft.Network/virtualNetworks/vnet-uat-net-ci-001/subnets/sn-uat-app-ci-002"
          },
          "dependencies": [
            "azurerm_route_table.udrapp2",
            "azurerm_subnet.snapp2"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet_route_table_association",
      "name": "udrsndb",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/4320f689-5133-4260-b235-d02cc16611ff/resourceGroups/rg-hub-net-ci-001/providers/Microsoft.Network/virtualNetworks/vnet-uat-net-ci-001/subnets/sn-uat-db-ci-001",
            "route_table_id": "/subscriptions/4320f689-5133-4260-b235-d02cc16611ff/resourceGroups/rg-uat-db-ci-001/providers/Microsoft.Network/routeTables/udr-uat-db-ci-001",
            "subnet_id": "/subscriptions/4320f689-5133-4260-b235-d02cc16611ff/resourceGroups/rg-hub-net-ci-001/providers/Microsoft.Network/virtualNetworks/vnet-uat-net-ci-001/subnets/sn-uat-db-ci-001"
          },
          "dependencies": [
            "azurerm_route_table.udrdb",
            "azurerm_subnet.sndb"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet_route_table_association",
      "name": "udrsnss",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/4320f689-5133-4260-b235-d02cc16611ff/resourceGroups/rg-hub-net-ci-001/providers/Microsoft.Network/virtualNetworks/vnet-hub-net-ci-001/subnets/sn-hub-ss-ci-001",
            "route_table_id": "/subscriptions/4320f689-5133-4260-b235-d02cc16611ff/resourceGroups/rg-hub-ss-ci-001/providers/Microsoft.Network/routeTables/udr-hub-ss-ci-001",
            "subnet_id": "/subscriptions/4320f689-5133-4260-b235-d02cc16611ff/resourceGroups/rg-hub-net-ci-001/providers/Microsoft.Network/virtualNetworks/vnet-hub-net-ci-001/subnets/sn-hub-ss-ci-001"
          },
          "dependencies": [
            "azurerm_route_table.udrss",
            "azurerm_subnet.snss"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_virtual_network",
      "name": "vnethb",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_space": [
              "10.121.0.0/23"
            ],
            "flow_timeout_in_minutes": 0,
            "guid": "ac31ae0e-c2bb-4a01-83f7-c612ef1eacf3",
            "id": "/subscriptions/4320f689-5133-4260-b235-d02cc16611ff/resourceGroups/rg-hub-net-ci-001/providers/Microsoft.Network/virtualNetworks/vnet-hub-net-ci-001",
            "location": "centralindia",
            "name": "vnet-hub-net-ci-001",
            "resource_group_name": "rg-hub-net-ci-001",
            "subnet": [
              {
                "address_prefix": "10.121.0.0/26",
                "id": "/subscriptions/4320f689-5133-4260-b235-d02cc16611ff/resourceGroups/rg-hub-net-ci-001/providers/Microsoft.Network/virtualNetworks/vnet-hub-net-ci-001/subnets/AzureFirewallSubnet",
                "name": "AzureFirewallSubnet"
              },
              {
                "address_prefix": "10.121.0.128/26",
                "id": "/subscriptions/4320f689-5133-4260-b235-d02cc16611ff/resourceGroups/rg-hub-net-ci-001/providers/Microsoft.Network/virtualNetworks/vnet-hub-net-ci-001/subnets/sn-hub-appgw-ci-001",
                "name": "sn-hub-appgw-ci-001"
              },
              {
                "address_prefix": "10.121.0.64/26",
                "id": "/subscriptions/4320f689-5133-4260-b235-d02cc16611ff/resourceGroups/rg-hub-net-ci-001/providers/Microsoft.Network/virtualNetworks/vnet-hub-net-ci-001/subnets/GatewaySubnet",
                "name": "GatewaySubnet"
              },
              {
                "address_prefix": "10.121.1.0/26",
                "id": "/subscriptions/4320f689-5133-4260-b235-d02cc16611ff/resourceGroups/rg-hub-net-ci-001/providers/Microsoft.Network/virtualNetworks/vnet-hub-net-ci-001/subnets/AzureBastionSubnet",
                "name": "AzureBastionSubnet"
              },
              {
                "address_prefix": "10.121.1.128/25",
                "id": "/subscriptions/4320f689-5133-4260-b235-d02cc16611ff/resourceGroups/rg-hub-net-ci-001/providers/Microsoft.Network/virtualNetworks/vnet-hub-net-ci-001/subnets/sn-hub-ss-ci-001",
                "name": "sn-hub-ss-ci-001",
                "security_group": "/subscriptions/4320f689-5133-4260-b235-d02cc16611ff/resourceGroups/rg-hub-ss-ci-001/providers/Microsoft.Network/networkSecurityGroups/nsg-hub-ss-ci-001"
              }
            ],
            "vm_protection_enabled": false
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_virtual_network",
      "name": "vnetuat",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_space": [
              "10.121.16.0/20"
            ],
            "flow_timeout_in_minutes": 0,
            "guid": "0de34de5-8e1e-4c8e-84e2-edd7b9f2291d",
            "id": "/subscriptions/4320f689-5133-4260-b235-d02cc16611ff/resourceGroups/rg-hub-net-ci-001/providers/Microsoft.Network/virtualNetworks/vnet-uat-net-ci-001",
            "location": "centralindia",
            "name": "vnet-uat-net-ci-001",
            "resource_group_name": "rg-hub-net-ci-001",
            "subnet": [
              {
                "address_prefix": "10.121.16.0/24",
                "id": "/subscriptions/4320f689-5133-4260-b235-d02cc16611ff/resourceGroups/rg-hub-net-ci-001/providers/Microsoft.Network/virtualNetworks/vnet-uat-net-ci-001/subnets/sn-uat-app-ci-001",
                "name": "sn-uat-app-ci-001",
                "security_group": "/subscriptions/4320f689-5133-4260-b235-d02cc16611ff/resourceGroups/rg-uat-app-ci-001/providers/Microsoft.Network/networkSecurityGroups/nsg-uat-app-ci-001"
              },
              {
                "address_prefix": "10.121.18.0/24",
                "id": "/subscriptions/4320f689-5133-4260-b235-d02cc16611ff/resourceGroups/rg-hub-net-ci-001/providers/Microsoft.Network/virtualNetworks/vnet-uat-net-ci-001/subnets/sn-uat-app-ci-002",
                "name": "sn-uat-app-ci-002",
                "security_group": "/subscriptions/4320f689-5133-4260-b235-d02cc16611ff/resourceGroups/rg-uat-app-ci-002/providers/Microsoft.Network/networkSecurityGroups/nsg-uat-app-ci-002"
              },
              {
                "address_prefix": "10.121.20.0/24",
                "id": "/subscriptions/4320f689-5133-4260-b235-d02cc16611ff/resourceGroups/rg-hub-net-ci-001/providers/Microsoft.Network/virtualNetworks/vnet-uat-net-ci-001/subnets/sn-uat-db-ci-001",
                "name": "sn-uat-db-ci-001",
                "security_group": "/subscriptions/4320f689-5133-4260-b235-d02cc16611ff/resourceGroups/rg-uat-db-ci-001/providers/Microsoft.Network/networkSecurityGroups/nsg-uat-db-ci-001"
              },
              {
                "address_prefix": "10.121.24.0/22",
                "id": "/subscriptions/4320f689-5133-4260-b235-d02cc16611ff/resourceGroups/rg-hub-net-ci-001/providers/Microsoft.Network/virtualNetworks/vnet-uat-net-ci-001/subnets/sn-uat-aks-ci-001",
                "name": "sn-uat-aks-ci-001",
                "security_group": "/subscriptions/4320f689-5133-4260-b235-d02cc16611ff/resourceGroups/rg-uat-aks-ci-001/providers/Microsoft.Network/networkSecurityGroups/nsg-uat-aks-ci-001"
              }
            ],
            "vm_protection_enabled": false
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_virtual_network_peering",
      "name": "peerhubtouat",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allow_forwarded_traffic": true,
            "allow_gateway_transit": true,
            "allow_virtual_network_access": true,
            "id": "/subscriptions/4320f689-5133-4260-b235-d02cc16611ff/resourceGroups/rg-hub-net-ci-001/providers/Microsoft.Network/virtualNetworks/vnet-hub-net-ci-001/virtualNetworkPeerings/Hub_to_UAT",
            "name": "Hub_to_UAT",
            "remote_virtual_network_id": "/subscriptions/4320f689-5133-4260-b235-d02cc16611ff/resourceGroups/rg-hub-net-ci-001/providers/Microsoft.Network/virtualNetworks/vnet-uat-net-ci-001",
            "resource_group_name": "rg-hub-net-ci-001",
            "use_remote_gateways": false,
            "virtual_network_name": "vnet-hub-net-ci-001"
          },
          "dependencies": [
            "azurerm_virtual_network.vnetuat"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_virtual_network_peering",
      "name": "peeruattohub",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allow_forwarded_traffic": true,
            "allow_gateway_transit": false,
            "allow_virtual_network_access": true,
            "id": "/subscriptions/4320f689-5133-4260-b235-d02cc16611ff/resourceGroups/rg-hub-net-ci-001/providers/Microsoft.Network/virtualNetworks/vnet-uat-net-ci-001/virtualNetworkPeerings/UAT_to_HUB",
            "name": "UAT_to_HUB",
            "remote_virtual_network_id": "/subscriptions/4320f689-5133-4260-b235-d02cc16611ff/resourceGroups/rg-hub-net-ci-001/providers/Microsoft.Network/virtualNetworks/vnet-hub-net-ci-001",
            "resource_group_name": "rg-hub-net-ci-001",
            "use_remote_gateways": false,
            "virtual_network_name": "vnet-uat-net-ci-001"
          },
          "dependencies": [
            "azurerm_virtual_network.vnethb"
          ]
        }
      ]
    }
  ]
}